--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,354 +1,8 @@
 <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-<div class="banner-profile">
-<% if @profile.banner.url.nil? %>
-	<%= image_tag "app/kwaku1.jpg", class: "custom-profile-banner" %>
+<% if @profile.user.kind == "Service Provider" %>
+	<%= render partial: 'service_provider', locals: { profile: @profile, mail_box: @mail_box, message: @new_message } %>
 <% else %>
-	<%= image_tag @profile.banner.url, class: "custom-profile-banner" %>
+	<%= render partial: 'organizer', locals: { profile: @profile } %>
 <% end %>
-	<ul class="rslides" id="slider" value="<%= @profile.id %>" >
-		<li>
-			<div class="banner-profile-info">
-				<h3 class="full_name_text"><%= @profile.name_of_agency %> <i class="full_name fa fa-pencil" aria-hidden="true"></i></h3>
-				<span class="line1"></span>
-				<p class="tagline_text"><%= @profile.tagline %><i class="tagline fa fa-pencil" aria-hidden="true"></i></p>
-				<span class="line2"></span>
-			</div>
-		</li>
-	</ul>
-	<input type="file" class="upload-custom-banner"  style="width:100%;" title="Click to upload a banner" onchange="previewFile()"/>
-</div>
-<div class="about-me">
-	<br />
-</div>
-<div class="about-me" id="about">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-4 col-xs-12">
-				<div class="mydetails slideanim text-center">
-					<div>
-						<%= image_tag "app/man.jpg", { class: "img-circle img-responsive", alt: "Generic placeholder image", width: "200", height: "200" } %>
-						<h3>Who we are</h3>
-						<p class="short_desc_text"><%= @profile.short_desc %><i class="short_desc fa fa-pencil" aria-hidden="true"></i></p>
-					</div>
-					<br />
-					<div class="contact-info some-border">
-						<i class="short_desc fa fa-pencil" aria-hidden="true"></i>
-						<h3>Where you can find us</h3>
-						<i aria-hidden="true"></i>
-                        <div class="footer-info">
-							<div class="some-border">
-								<i class="fa fa-globe" aria-hidden="true"></i>
-								<p class="p1 address_text">77727 Moi Avenue </p>
-								<p class="p2 address_text_2">Nairobi, Kenya</p>
-							</div>
-							<div class="some-border">
-								<i class="fa fa-phone" aria-hidden="true"></i>
-								<p class="p1 phone_number_text">+1 515 151515</p>
-								<p class="p2 phone_number_text_2">+00 1010101010</p>
-							</div>
-							<div class="some-border">
-								<i class="fa fa-envelope" aria-hidden="true"></i>
-								<p class="p1 email_text"><%= @profile.user.email %></p>
-								<p class="p2 email_text_2">myemail2@example.com</p>
-							</div>
-						</div>
-					</div>
-
-
-
-				</div>
-			</div>
-			<div class="col-md-8 col-xs-12">
-
-				<div class="navigation-div">
-					<ul class="nav nav-tabs">
-    					<li class="active"><a data-toggle="tab" href="#home">My Inbox</a></li>
-    					<li><a data-toggle="tab" href="#menu1">Post Service</a></li>
-    					<li><a data-toggle="tab" href="#menu3">About</a></li>
-  					</ul>
-  				</div>
-
-  				<div class="tab-content">
-    				<div id="home" class="tab-pane fade in active">
-      					<div class="myskills slideanim">
-							<div class="row">
-  								<div class="panel-group" id="accordion">
-								  <% @mail_box.each do |message| %>
-    								<div class="panel panel-default">
-      									<div class="panel-heading">
-        									<h4 class="panel-title">
-          										<a class="message-mail" title="<%= message.id %>" data-toggle="collapse" data-parent="#accordion" href="#collapse<%= message.id %>"><%= message.sender.name %></a>
-        									</h4>
-        									
-      									</div>
-      									<div id="collapse<%= message.id %>" class="panel-collapse collapse">
-        									<div class="panel-body">
-        										<%=  message.body %>
-        										<br /><br />
-        										<a href=".rplymd" class="messaging-body" data-toggle="modal">Reply</a>
-        									</div>
-      									</div>
-    								</div>
-									<% end %>
-  								</div> 
-							</div>
-						</div>
-    				</div>
-    				<div id="menu1" class="tab-pane fade">
-      					<div class="myskills slideanim">
-							<h3 class="text-center">Post a service</h3>
-							<%= form_for @service, url: { controller: :services, action: :create, profile: @profile.id } do |f| %>
-                    		<table class="table table-striped">
-                    			<tr>
-                    				<td>Your service type</td>
-                    				<td>
-										<%= f.select :category_id, @categories.map {|c| [c.name, c.id]}, class: "form-control" %>
-									</td>
-								</tr>
-								<tr>
-									<td>Please upload a picture of your product</td>
-									<td>
-										<%= f.file_field :picture, class: "form-control" %>
-									</td>
-								</tr>
-								<tr>
-									<td>Description of the product or service</td>
-									<td>
-										<%= f.text_area :desc_service, rows:"10", cols:"31", placeholder: "Service Description", class:"form-control" %>
-									</td>
-								</tr>
-								<tr>
-									<td>Minimal Price</td>
-									<td>
-										<%= f.text_field :price, placeholder: "Price", class: "form-control" %>	
-									</td>
-								</tr>
-								<tr>
-									<td colspan="2" align="center">	
-										<%= f.submit "Upload", class: "btn btn-success" %>
-									</td>
-								</tr>
-								<% end %>
-							</table>
-						</div>
-    				</div>
-    				<div id="menu3" class="tab-pane fade">
-      					<div class="myskills slideanim">
-							<h3 class="text-center">Why hire us <i class="long_desc fa fa-pencil" aria-hidden="true"></i></h3>
-							<p class="skill-text long_desc_text"><%= @profile.desc %></p>
-						</div>
-						<br />
-						<div class="myskills slideanim move-down">
-							<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-								<ol class="carousel-indicators">
-									<% 0.upto(@my_services.size - 1) do |n| %>
-									<li data-target="#carousel-example-generic" data-slide-to="<%= n %>" class="active"></li>
-									<% end %>
-								</ol>
-								<div class="carousel-inner" role="listbox">
-									<% if @my_services.blank? %>
-
-									<h3 class="text-center">You are yet to post a service</h3>
-									<hr style="margin:0;">
-									<p class="text-center">When you post a service, you’ll see them here.</p>
-
-									<% else %>
-
-									<% @my_services.each do |service| %>
-									
-									<div class="col-md-4">
-										<%= image_tag service.picture.small.url %>
-									</div>
-
-									<% end %>		
-									<% end %>
-								</div>
-							</div>
-						</div>
-
-
-    				</div>
-  				</div>
-			</div>
-
-				
-				
-			
-				
-			</div>
-		</div>
-	</div>
-	<div class="bottom-div">
-		<br />
-	</div>
-</div>
-
-		<div class="container">
-  			
-  			<div class="modal fade rplymd" id="replyModal" role="dialog">
-    			<div class="modal-dialog">
-    
-      				<div class="modal-content">
-        				<div class="modal-header the-modal-header">
-          					<button type="button" class="close" data-dismiss="modal">&times;</button>
-          					<%= image_tag "app/logo1.png", class: "img-head" %>
-          					<br /><br /><br />
-          					<h3 class="modal-title">Reply to message</h3>
-        				</div>
-        				<div class="modal-body md-body" align="center">
-        					<form action="" method="post">
-        						<textarea name="the-reply" class="textbox-body" placeholder="Reply"></textarea>
-        						<br /><br /><br />
-        				</div>
-        				<div class="modal-footer the-modal-footer">
-        					<input type="submit" class="textbox-button" name="hat" value="Send Reply" />
-        					</form>
-        				</div>
-      				</div>
-      
-    			</div>
-  			</div>
-  
-		</div>
-
-
-
-
-<script>
-
-$(".full_name").click(function(e){
-    $('.full_name_text').attr("contentEditable", "true");
-    $('.full_name_text').css("outline","none");
-    console.log("it");
-});
-
-$(".tagline").click(function(e){
-    $('.tagline_text').attr("contentEditable", "true");
-    $('.tagline_text').css("outline","none");
-    console.log("it");
-});
-
-$(".short_desc").click(function(e){
-    $('.short_desc_text').attr("contentEditable", "true");
-    $('.short_desc_text').css("outline","none");
-	$('.short_desc_text').text("");
-    console.log("it");
-});
-
-$(".long_desc").click(function(e){
-    $('.long_desc_text').attr("contentEditable", "true");
-    console.log("it");
-});
-
-$(".address_text").click(function(e){
-    $('.address_text').attr("contentEditable", "true");
-    console.log("it");
-});
-
-$(".address_text_2").click(function(e){
-    $('.address_text_2').attr("contentEditable", "true");
-    console.log("it");
-});
-
-$(".phone_number_text").click(function(e){
-    $('.phone_number_text').attr("contentEditable", "true");
-    console.log("it");
-});
-
-$(".phone_number_text").click(function(e){
-    $('.phone_number_text_2').attr("contentEditable", "true");
-    console.log("it");
-});
-
-$(".email_text").click(function(e){
-    $('.email_text').attr("contentEditable", "true");
-    console.log("it");
-});
-
-$(".email_text_2").click(function(e){
-    $('.email_text_2').attr("contentEditable", "true");
-    console.log("it");
-});
-
-function previewFile() {
-  var preview = document.querySelector('.custom-profile-banner');
-  var file    = document.querySelector('input[type=file].upload-custom-banner').files[0];
-  var reader  = new FileReader();
-
-  reader.addEventListener("load", function () {
-    preview.src = reader.result;
-  }, false);
-
-  if (file) {
-    reader.readAsDataURL(file);
-  }
-  console.log(file)
-  //console.log(document.querySelector('input[type=file].upload-custom-banner').files[0].name)
-}
-
-
-
-
-$(document).keypress(function(e) {
-	if(e.which == 13) {
-		e.preventDefault();
-		var profile;
-		var formData = new FormData();
-    	$input = $("input[type=file].upload-custom-banner");
-		formData.append('profile[banner]', $input[0].files[0]);
-		formData.append('profile[name_of_agency]', $('.full_name_text').text());
-		formData.append('profile[desc]', $('.long_desc_text').text());
-		formData.append('profile[short_desc]', $('.short_desc_text').text());
-		formData.append('profile[tagline]', $('.tagline_text').text());
-		formData.append('address[physical_address]', $('.address_text').text());
-		$('#slider').attr("value", function( i, val ){
-			profile = val;
-		});
-		$.ajax({
-		  url: "/profiles/"+profile,
-		 type: "PATCH",
-		 data: formData,
-		cache: false,
-  contentType: false,
-  processData: false,
-	  success: function(resp){ 
-			console.log(resp);
-			},
-		 fail:  function(resp){
-			console.log(resp);
-	   }
-		});
-	   
-
-	}
-
-
-});
-
-$(document).ready(function(e){
-	$('.message-mail').click(function(e){
-		var messageId = $(this).attr('title');
-		var messageForm = new FormData();
-		messageForm.append('message[read]', 1);
-
-		$.ajax({
-		  url: "/messages/"+messageId,
-		 type: "PATCH",
-		 data: messageForm,
-		cache: false,
-  contentType: false,
-  processData: false,
-	  success: function(resp){ 
-			console.log(resp);
-			},
-		 fail:  function(resp){
-			console.log(resp);
-	   		}
-		});
-
-	});
-});
-
-</script>
 
 
